--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,29 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
+build
+.output
+.vercel
+
+# Environment variables - CRITICAL for security
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
+
+# Cache and temporary files
+.cache
 *.local
+.vite
+.turbo
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +41,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# OS files
+Thumbs.db
+.AppleDouble
+.LSOverride
+
+# Testing
+coverage
+*.lcov
+.nyc_output
+
+# Debug
+*.tsbuildinfo
