--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "recharts": "^3.5.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
